--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#F63366"
-backgroundColor="#f5ef42"
+backgroundColor="rgb(255,255,0)"
 secondaryBackgroundColor="#F0F2F6"
 textColor="#262730"
 font="sans serif"
