--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#F63366"
-backgroundColor="#ffff00"
+primaryColor="#ffff00"
+backgroundColor="#ffffff"
 secondaryBackgroundColor="#F0F2F6"
 textColor="#262730"
 font="sans serif"
