--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,5 @@
 [theme]
-primaryColor="#ffff00"
-backgroundColor="#ffffff"
-secondaryBackgroundColor="#F0F2F6"
-textColor="#262730"
-font="sans serif"
+base="light"
+primaryColor="rgba(243, 217, 33)"
+backgroundColor="#FFFFFF"
+secondaryBackgroundColor="rgba(229, 229, 229)"
